[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mavlink_analyzer"
authors = [
    {name = "robobe", email = "author@example.com"}
]
description = "mavlink message analyzer"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymavlink",
    "textual"
]

[project.scripts]
mavlink-analyzer = "mavlink_analyzer.main:main"